@@ -73,6 +73,21 @@ namespace Marvel {
 	{
 	}
 
+	void mvPlot::configure(std::string  xname,
+		std::string yname, bool colormapScale, float scale_min, float scale_max, int scale_height, ImPlotFlags flags,
+		ImPlotAxisFlags xflags, ImPlotAxisFlags yflags)
+	{
+		m_xaxisName = std::move(xname);
+		m_yaxisName = std::move(yname);
+		m_colormapscale = colormapScale;
+		m_scale_min = scale_min;
+		m_scale_max = scale_max;
+		m_scale_height = scale_height;
+		m_flags = flags;
+		m_xflags = xflags;
+		m_yflags = yflags;
+	}
+
 	void mvPlot::addSeries(mvSeries* series, bool updateBounds)
 	{
 
